--- a/index.html
+++ b/index.html
@@ -49,20 +49,19 @@ https://templatemo.com/tm-531-reflux
           <div class="social-network">
             <ul class="soial-icons">
               <li>
-                <a href="https://fb.com/templatemo"><i class="fa fa-facebook"></i></a>
+                <a
+                  href="https://www.instagram.com/ariful_himel/?fbclid=IwAR3LgF5UdiN_j2W8lW8Dl91NhAQF7vctzIQvr88vvGMndtB7nRyn0zKPiDA"><i
+                    class="fa fa-instagram"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a
+                  href="https://www.linkedin.com/in/mahamudm90/?fbclid=IwAR02WRb3rVvABMYmARrzH3BjsXjMCV1AxC9A_Lm4XUN0qggAJRqs7BQnC_c"><i
+                    class="fa fa-linkedin"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/tonmoy.datta.756"><i class="fa fa-facebook"></i></a>
               </li>
-              <li>
-                <a href="#"><i class="fa fa-dribbble"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-rss"></i></a>
-              </li>
+
             </ul>
           </div>
           <div class="copyright-text">
@@ -92,12 +91,14 @@ https://templatemo.com/tm-531-reflux
                 <h4>Md.Mahamud Hasan</h4>
                 <ul class="soial-icons">
                   <li>
-                    <a href="#"><i class="fa fa-github"></i></a>
+                    <a href="https://github.com/MahamudM90"><i class="fa fa-github"></i></a>
 
                   </li>
                   <br>
                   <li>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <a
+                      href="https://www.linkedin.com/in/mahamudm90/?fbclid=IwAR3cWGyqEW-S2j9yrr7Ddl6FTqqtDzk0HMrILUpYimnQzdp8_Nv6Fj1iKm8"><i
+                        class="fa fa-linkedin"></i></a>
 
                   </li>
                 </ul>
