--- a/index.html
+++ b/index.html
@@ -158,12 +158,16 @@ https://templatemo.com/tm-531-reflux
               <h4>Tonmoy Datta</h4>
               <ul class="soial-icons">
                 <li>
-                  <a href="#"><i class="fa fa-github"></i></a>
+                  <a
+                    href="https://github.com/Mr-Tanmoy-Datta?fbclid=IwAR2H5fq4xfJpnKKsUnUnKN41x5YLV3jDHK0czbzAjRQOXD7TJDwe2Fy888I"><i
+                      class="fa fa-github"></i></a>
 
                 </li>
                 <br>
                 <li>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                  <a
+                    href="https://www.linkedin.com/in/tanmoy-datta-6a58a821a/?fbclid=IwAR3kSEmIqYGEtjEsISzknZRfQZCrsjPu2lFq9jk1IfJjcSW79HKxV2wD9iY"><i
+                      class="fa fa-linkedin"></i></a>
 
                 </li>
               </ul>
