--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="" />
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
 
-  <title>About Us</title>
+  <title>About Me</title>
   <!--
 Reflux Template
 https://templatemo.com/tm-531-reflux
@@ -36,47 +36,30 @@ https://templatemo.com/tm-531-reflux
             <a href="#"><img src="assets/images/author-image.jpg" alt="" /></a>
           </div>
           <div class="author-content">
-            <h4>Team Members</h4>
+            <h4>Mahamud Hasan</h4>
             <span>Profile</span>
           </div>
           <nav class="main-nav" role="navigation">
             <ul class="main-menu">
-              <li><a href="#section1">About Us</a></li>
-
-              <li><a href="#section4">Contact Us</a></li>
+              <li><a href="#section1">About Me</a></li>
             </ul>
           </nav>
-          <div class="social-network">
-            <ul class="soial-icons">
-              <li>
-                <a
-                  href="https://www.instagram.com/ariful_himel/?fbclid=IwAR3LgF5UdiN_j2W8lW8Dl91NhAQF7vctzIQvr88vvGMndtB7nRyn0zKPiDA"><i
-                    class="fa fa-instagram"></i></a>
-              </li>
-              <li>
-                <a
-                  href="https://www.linkedin.com/in/mahamudm90/?fbclid=IwAR02WRb3rVvABMYmARrzH3BjsXjMCV1AxC9A_Lm4XUN0qggAJRqs7BQnC_c"><i
-                    class="fa fa-linkedin"></i></a>
-              </li>
-              <li>
-                <a href="https://www.facebook.com/tonmoy.datta.756"><i class="fa fa-facebook"></i></a>
-              </li>
 
-            </ul>
-          </div>
           <div class="copyright-text">
-            <p>2021@All Right Reserved Reflux Design</p>
+            <p>2021@All Right Reserved.</p>
           </div>
         </div>
       </div>
     </div>
-
     <section class="section about-me" data-section="section1">
       <div class="container">
         <div class="section-heading">
-          <h2>About Us</h2>
+          <h2>About Me</h2>
           <div class="line-dec"></div>
-          <span></span>
+
+          <p>My dream is to be a software engineer and I am passionate about it. I love exploring and learning new
+            technology & I enjoy solving algorithms problems and contributing to open source projects.</p>
+
         </div>
         <div class="right-image-post">
           <div class="row">
@@ -112,188 +95,67 @@ https://templatemo.com/tm-531-reflux
             </div>
           </div>
         </div>
-        <div class="right-image-post">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="right-text">
-                <h4>Md.Ariful Islam</h4>
-                <ul class="soial-icons">
-                  <li>
-                    <a href="#"><i class="fa fa-github"></i></a>
-
-                  </li>
-                  <br>
-                  <li>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
-
-                  </li>
-                </ul>
-
-                <div class="white-button">
-                  <a href="#">Personal Website</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="right-image">
-                <img src="assets/images/right-image.jpg" alt="" />
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="section about-me" data-section="section1">
-
-      <div class="right-image-post">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="right-image">
-              <img src="assets/images/left-image1.jpg" alt="" />
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="right-text">
-              <h4>Tonmoy Datta</h4>
-              <ul class="soial-icons">
-                <li>
-                  <a
-                    href="https://github.com/Mr-Tanmoy-Datta?fbclid=IwAR2H5fq4xfJpnKKsUnUnKN41x5YLV3jDHK0czbzAjRQOXD7TJDwe2Fy888I"><i
-                      class="fa fa-github"></i></a>
-
-                </li>
-                <br>
-                <li>
-                  <a
-                    href="https://www.linkedin.com/in/tanmoy-datta-6a58a821a/?fbclid=IwAR3kSEmIqYGEtjEsISzknZRfQZCrsjPu2lFq9jk1IfJjcSW79HKxV2wD9iY"><i
-                      class="fa fa-linkedin"></i></a>
-
-                </li>
-              </ul>
-              <p>
-
-              </p>
-              <div class="white-button">
-                <a href="#">Personal Website</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
 
 
-      <section class="section contact-me" data-section="section4">
-        <div class="container">
-          <div class="section-heading">
-            <h2>Contact Us</h2>
-            <div class="line-dec"></div>
-            <span></span>
-          </div>
-          <div class="row">
-            <div class="center-content">
-              <div class="container">
-                <form id="contact" action="" method="post">
-                  <div class="row">
-                    <div class="col-md-6">
-                      <fieldset>
-                        <input name="name" type="text" class="form-control" id="name" placeholder="Your name..."
-                          required="" />
-                      </fieldset>
-                    </div>
-                    <div class="col-md-6">
-                      <fieldset>
-                        <input name="email" type="text" class="form-control" id="email" placeholder="Your email..."
-                          required="" />
-                      </fieldset>
-                    </div>
-                    <div class="col-md-12">
-                      <fieldset>
-                        <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject..."
-                          required="" />
-                      </fieldset>
-                    </div>
-                    <div class="col-md-12">
-                      <fieldset>
-                        <textarea name="message" rows="6" class="form-control" id="message"
-                          placeholder="Your message..." required=""></textarea>
-                      </fieldset>
-                    </div>
-                    <div class="col-md-12">
-                      <fieldset>
-                        <button type="submit" id="form-submit" class="button">
-                          Send Message
-                        </button>
-                      </fieldset>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-  </div>
+        <!-- Scripts -->
+        <!-- Bootstrap core JavaScript -->
+        <script src="vendor/jquery/jquery.min.js"></script>
+        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Scripts -->
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="assets/js/isotope.min.js"></script>
+        <script src="assets/js/owl-carousel.js"></script>
+        <script src="assets/js/lightbox.js"></script>
+        <script src="assets/js/custom.js"></script>
+        <script>
+          //according to loftblog tut
+          $(".main-menu li:first").addClass("active");
 
-  <script src="assets/js/isotope.min.js"></script>
-  <script src="assets/js/owl-carousel.js"></script>
-  <script src="assets/js/lightbox.js"></script>
-  <script src="assets/js/custom.js"></script>
-  <script>
-    //according to loftblog tut
-    $(".main-menu li:first").addClass("active");
+          var showSection = function showSection(section, isAnimate) {
+            var direction = section.replace(/#/, ""),
+              reqSection = $(".section").filter(
+                '[data-section="' + direction + '"]'
+              ),
+              reqSectionPos = reqSection.offset().top - 0;
 
-    var showSection = function showSection(section, isAnimate) {
-      var direction = section.replace(/#/, ""),
-        reqSection = $(".section").filter(
-          '[data-section="' + direction + '"]'
-        ),
-        reqSectionPos = reqSection.offset().top - 0;
+            if (isAnimate) {
+              $("body, html").animate(
+                {
+                  scrollTop: reqSectionPos
+                },
+                800
+              );
+            } else {
+              $("body, html").scrollTop(reqSectionPos);
+            }
+          };
 
-      if (isAnimate) {
-        $("body, html").animate(
-          {
-            scrollTop: reqSectionPos
-          },
-          800
-        );
-      } else {
-        $("body, html").scrollTop(reqSectionPos);
-      }
-    };
+          var checkSection = function checkSection() {
+            $(".section").each(function () {
+              var $this = $(this),
+                topEdge = $this.offset().top - 80,
+                bottomEdge = topEdge + $this.height(),
+                wScroll = $(window).scrollTop();
+              if (topEdge < wScroll && bottomEdge > wScroll) {
+                var currentId = $this.data("section"),
+                  reqLink = $("a").filter("[href*=\\#" + currentId + "]");
+                reqLink
+                  .closest("li")
+                  .addClass("active")
+                  .siblings()
+                  .removeClass("active");
+              }
+            });
+          };
 
-    var checkSection = function checkSection() {
-      $(".section").each(function () {
-        var $this = $(this),
-          topEdge = $this.offset().top - 80,
-          bottomEdge = topEdge + $this.height(),
-          wScroll = $(window).scrollTop();
-        if (topEdge < wScroll && bottomEdge > wScroll) {
-          var currentId = $this.data("section"),
-            reqLink = $("a").filter("[href*=\\#" + currentId + "]");
-          reqLink
-            .closest("li")
-            .addClass("active")
-            .siblings()
-            .removeClass("active");
-        }
-      });
-    };
+          $(".main-menu").on("click", "a", function (e) {
+            e.preventDefault();
+            showSection($(this).attr("href"), true);
+          });
 
-    $(".main-menu").on("click", "a", function (e) {
-      e.preventDefault();
-      showSection($(this).attr("href"), true);
-    });
-
-    $(window).scroll(function () {
-      checkSection();
-    });
-  </script>
+          $(window).scroll(function () {
+            checkSection();
+          });
+        </script>
 </body>
 
 </html>
